Fix: fixes on mobile view in header and other components

--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -79,4 +79,12 @@
             order: 1;
         }
     }
+    @media (min-width: $Medium) and (max-width: $Large){
+        &_info{
+            &::after{
+                right: 0px;
+            }
+            
+        }
+    }
 }
