--- a/src/scss/components/our_team.scss
+++ b/src/scss/components/our_team.scss
@@ -6,6 +6,7 @@
   }
 
   .assesors-cont {
+    max-width: $max-large;
     width: 100%;
     flex-wrap: wrap;
     & >:nth-last-child(-n+3){
@@ -62,6 +63,7 @@
     border: none;
     background: $semantic-gradient;
     box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.5);
+    max-width: $max-large;
   }
   @media screen and (min-width: $Small){
     .assesors-cont {
